--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Dependency directories
 node_modules/
 jspm_packages/
-package-lock.json
-yarn.lock
+# package-lock.json
+# yarn.lock
 
 # Build and distribution
 dist/
