--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
-  "type": "module",
-  "scripts": {
-    "dev": "tsx --watch --env-file .env src/index.ts",
-    "dev:nodemon": "nodemon --watch src --exec tsx src/index.ts",
-    "build": "tsc -p tsconfig.build.json",
-    "start": "node --env-file .env dist/index.js",
-    "type-check": "tsc --noEmit"
-  },
   "dependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.1.0",
     "amqplib": "^0.10.9",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
-    "helmet": "^8.1.0",
     "postgres": "^3.4.8",
     "prom-client": "^15.1.3",
     "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.5",
     "@types/amqplib": "^0.10.8",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
-    "@types/node": "^25.1.0",
     "@types/supertest": "^6.0.3",
     "cors": "^2.8.6",
     "drizzle-kit": "^0.31.8",
@@ -33,7 +24,6 @@
     "nodemon": "^3.1.11",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "tsx": "^4.21.0"
   }
 }
