--- a/inventory-service/Dockerfile
+++ b/inventory-service/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci
+ENV npm_config_cache=/tmp/.npm
+COPY package.json ./
+RUN npm install
 COPY . .
 RUN npm run build
 
@@ -9,9 +10,8 @@ FROM node:20-alpine AS production
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/package.json ./
-COPY --from=builder /app/package-lock.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/.env ./
-RUN npm ci --omit=dev
+RUN npm install --omit=dev
 EXPOSE 3000
 CMD ["node", "--env-file", ".env", "dist/index.js"]
