--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci
+COPY package.json ./
+RUN npm install
 COPY . .
 RUN npm run build
 
@@ -9,9 +9,8 @@ FROM node:20-alpine AS production
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/package.json ./
-COPY --from=builder /app/package-lock.json ./
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/.env ./
-RUN npm ci --omit=dev
-EXPOSE 3000
+RUN npm install --omit=dev
+EXPOSE 3001
 CMD ["node", "--env-file", ".env", "dist/index.js"]
