--- a/order-service/package.json
+++ b/order-service/package.json
@@ -10,14 +10,21 @@
     "push": "drizzle-kit push"
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
+    "axios": "^1.13.4",
+    "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "postgres": "^3.4.0",
+    "winston": "^3.14.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
+    "@types/amqplib": "^0.10.8",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
+    "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
