--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prom-client": "^15.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
