--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -10,15 +10,20 @@
     "push": "drizzle-kit push"
   },
   "dependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.30.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "nodemon": "^3.1.11",
     "postgres": "^3.4.0",
+    "prom-client": "^15.1.3",
     "winston": "^3.14.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
     "tsx": "^4.21.0",
