--- a/order-service/package.json
+++ b/order-service/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.13.4",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "nodemon": "^3.1.11",
     "postgres": "^3.4.0",
+    "prom-client": "^15.1.3",
+    "uuid": "^13.0.0",
     "winston": "^3.14.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
     "@types/amqplib": "^0.10.8",
+    "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.8",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
