fix: Update Order Service port from 3005 to 3001 in Kong configuration.

--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -10,6 +10,7 @@
     "push": "drizzle-kit push"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "drizzle-orm": "^0.30.0",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
     "tsx": "^4.21.0",
