--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - order-db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U orderuser"]
+      test: ["CMD-SHELL", "pg_isready -U orderuser -d orderdb"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -34,7 +34,7 @@ services:
     volumes:
       - inventory-db-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U inventoryuser"]
+      test: ["CMD-SHELL", "pg_isready -U inventoryuser -d inventorydb"]
       interval: 10s
       timeout: 5s
       retries: 5
