--- a/order-service/package.json
+++ b/order-service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.13.4",
+    "cors": "^2.8.6",
     "drizzle-orm": "^0.45.1",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.5",
     "@types/amqplib": "^0.10.8",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
     "drizzle-kit": "^0.31.8",
