remove env from dockerfile

--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -10,7 +10,6 @@ WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/.env ./
 RUN npm install --omit=dev
 EXPOSE 3001
-CMD ["node", "--env-file", ".env", "dist/index.js"]
+CMD ["node", "dist/index.js"]
