--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -7,7 +7,8 @@
     "start": "node --env-file .env dist/index.js",
     "type-check": "tsc --noEmit",
     "migrate": "drizzle-kit generate",
-    "push": "drizzle-kit push"
+    "push": "drizzle-kit push",
+    "test": "vitest run"
   },
   "dependencies": {
     "cors": "^2.8.6",
@@ -26,8 +27,11 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
+    "@types/supertest": "^6.0.3",
     "drizzle-kit": "^0.31.8",
+    "supertest": "^7.2.2",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
