--- a/inventory-service/package.json
+++ b/inventory-service/package.json
@@ -10,6 +10,7 @@
     "push": "drizzle-kit push"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
