--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -17,3 +17,8 @@ scrape_configs:
     static_configs:
       - targets: ['kong:8001']
     metrics_path: '/metrics'
+
+  - job_name: 'external-application'
+    static_configs:
+      - targets: ['host.docker.internal:8081', '172.17.0.1:8081']
+    metrics_path: '/metrics'
